# grader-agents

./: .gitignore  ENV_EXAMPLE_FILE  README.md  analysis.ipynb  grader.csv  log.txt  pyproject.toml  time_log1.txt
prompts/guidelines/prompt1/: Prompt-1-Guidelines.docx  rubric.json
prompts/guidelines/prompt2/: rubric.json
prompts/guidelines/prompt3/: rubric.json
prompts/guidelines/prompt4/: rubric.json
prompts/guidelines/prompt5/: rubric.json
prompts/guidelines/prompt6/: rubric.json
src/crew_agents/: crew.py  main.py
src/crew_agents/config/: agents.yaml  tasks.yaml
src/crew_agents/data/guidelines/prompt2/: rubric.json
src/crew_agents/data/guidelines/prompt3/: rubric.json
src/crew_agents/data/guidelines/prompt4/: rubric.json
src/crew_agents/data/guidelines/prompt5/: rubric.json
src/crew_agents/data/guidelines/prompt6/: rubric.json
src/crew_agents/tools/: custom_tool.py
submissions/: training_data_1.csv  training_data_2.csv  training_data_3.csv  training_data_4.csv  training_data_5.csv  training_data_6.csv
