[project]
name = "crew_agents"
version = "0.1.0"
description = "crew-agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.118.0,<1.0.0",
    "litellm>=1.67.1",
    "matplotlib>=3.10.1",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=4.1.0",
]

[project.scripts]
crew_agents = "crew_agents.main:run"
run_crew = "crew_agents.main:run"
train = "crew_agents.main:train"
replay = "crew_agents.main:replay"
test = "crew_agents.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
